--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ProjectList.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ProjectList.razor
@@ -8,7 +8,7 @@
         <MExpansionPanels Class="project-list" Flat Accordion @key="@($"{EnvironmentClusterId}{TeamId}")">
             @foreach (var project in _projects)
             {
-                var apps = _apps.Where(app => app.ProjectId == project.Id && app.EnvironmentClusters.Any(ec => ec.Id == EnvironmentClusterId)).ToList();
+                var apps = _apps.Where(app => app.ProjectId == project.Id ).ToList();
                 LatestReleaseConfigModel? latest = null;
                 var bizLatestRelease = _bizLatestReleaseConfig.FirstOrDefault(x => x.ProjectId == project.Id);
                 var appLatestRelease = _appLatestReleaseConfig.Where(l => apps.Any(a => a.Id == l.AppId)).MaxBy(x => x.LastPublishTime);
@@ -75,7 +75,7 @@
                         <MRow>
                             @if (apps.Any())
                             {
-                                foreach (var app in apps)
+                                foreach (var app in apps.Take(3))
                                 {
                                     var appLatest = _appLatestReleaseConfig.FirstOrDefault(x => x.AppId == app.Id);
                                     <MCol Lg="4" Md="6" Sm="12">
