feat:update diplayname

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ConfigItems.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ConfigItems.razor
@@ -82,7 +82,7 @@
     @if (EnableClone && !ConfigObject.FromRelation)
     {
         <SButton Disabled="DisabledButton" OnClickStopPropagation Icon Class="mr-4" OnClick="CloneConfig">
-        <SIcon Tooltip="@T("Clone")" Size="20" Color="@buttonColor">fas fa-copy</SIcon>
+        <SIcon Tooltip="@T("Clone")" Size="20" Color="@buttonColor">fa:fas fa-copy</SIcon>
         </SButton>
     }
     <SButton Disabled="DisabledButton" OnClickStopPropagation Icon Class="mr-4" OnClick="ReleaseConfig">
