fix: fix issues

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RollbackModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RollbackModal.razor
@@ -7,7 +7,7 @@
             @T("RollBackAlertMessage")
         </MAlert>
         <MTimeline Style="position:relative; left:-252px;">
-            <MTimelineItem Color="primary" Small Right>
+            <MTimelineItem Color="primary" Small Right FillDot>
                 <OppositeContent>
                     <div>
                         <div style="font-size:14px; font-weight: 500; color: #1B2559;">
@@ -22,9 +22,9 @@
                     </div>
                 </ChildContent>
             </MTimelineItem>
-            <MTimelineItem Color="primary" Small Right>
+            <MTimelineItem Color="primary" Small Right FillDot>
                 <OppositeContent>
-                    <div style="font-size:14px; font-weight: 500; color: #1B2559;">@T("Rollback to")</div>
+                    <div style="font-size:14px; font-weight: 500; color: #1B2559; width: 48px; float: right;">@T("Rollback to")</div>
                 </OppositeContent>
                 <ChildContent>
                     <div>
