--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
@@ -1,5 +1,4 @@
-﻿@using BlazorComponent
-@using Microsoft.AspNetCore.Components.Web
+﻿@using Microsoft.AspNetCore.Components.Web
 @using Masa.Blazor
 @using System.Diagnostics.CodeAnalysis
 @using Microsoft.AspNetCore.Components.Authorization
