--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Shared/MainLayout.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Shared/MainLayout.razor
@@ -2,19 +2,9 @@
 @inherits LayoutComponentBase
 @inject IMasaStackConfig MasaStackConfig
 
-<SLayout OnErrorAsync="OnError"
-         TeamRouteFormat="team"
+<SLayout TeamRouteFormat="team"
+         Class="fill-height"
          Logo="https://cdn.masastack.com/stack/images/logo/MASAStack/logo-h-en.png"
          MiniLogo="https://cdn.masastack.com/stack/images/logo/MASAStack/logo.png">
     @Body
 </SLayout>
-
-@code {
-    [Inject]
-    public IPopupService PopupService { get; set; } = default!;
-
-    async Task OnError(Exception exception)
-    {
-        await PopupService.EnqueueSnackbarAsync(exception.Message, AlertTypes.Error);
-    }
-}
