--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
@@ -9,7 +9,7 @@
 @using Masa.BuildingBlocks.StackSdks.Pm.Model
 @using Masa.Stack.Components
 @using Masa.Dcc.Web.Admin.Rcl.Pages.Modal;
-@using Humanizer
+@using TimeAgo;
 @using System.Reflection;
 @using Masa.BuildingBlocks.StackSdks.Config;
 @using Masa.Contrib.StackSdks.Config;
