--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
@@ -41,7 +41,7 @@
                             }
                         </MChipGroup>
                         <div class="mx-2 d-flex justify-end regular3--text btn text-overflow" style="margin:16px 0 0 0;">
-                            <span style="font-size: 12px; color: #A3AED0;">@T("Edit in") @label.ModificationTime.Humanize(utcDate: true, culture:I18n.Culture)</span>
+                            <span style="font-size: 12px; color: #A3AED0;">@T("Edit in") @label.ModificationTime.TimeAgo(I18n.Culture)</span>
                             <span class="mx-2" style="color:#E2E7F4">|</span>
                             <span style="font-size: 12px; color: #323D6F;">@label.ModifierName</span>
                         </div>
