fix:  ignore lower-up-case for config objects name

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
@@ -8,11 +8,11 @@
 @using Masa.Dcc.Web.Admin.Rcl.Components
 @using Masa.BuildingBlocks.StackSdks.Pm.Model
 @using Masa.Stack.Components
-@using Masa.Dcc.Web.Admin.Rcl.Pages.Modal;
+@using Masa.Dcc.Web.Admin.Rcl.Pages.Modal
 @using Humanizer
-@using System.Reflection;
-@using Masa.BuildingBlocks.StackSdks.Config;
-@using Masa.Contrib.StackSdks.Config;
-@using DeepCloner.Core;;
-@using Masa.Contrib.StackSdks.Caller;
-@using Masa.Dcc.Contracts.Admin;
+@using System.Reflection
+@using Masa.BuildingBlocks.StackSdks.Config
+@using Masa.Contrib.StackSdks.Config
+@using Masa.Contrib.StackSdks.Caller
+@using Masa.Dcc.Contracts.Admin
+@using Force.DeepCloner
